--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Font and Text Properties in CSS</title>
 
         <!-- TO DO: Add your name to the meta author tag -->
-        <meta name="author" content="">
+        <meta name="author" content="Marci Jones">
         <meta name="description" content="Practice with font and text properties used in CSS">
 
         <!-- This meta tag is included because this site is responsive -->
@@ -16,6 +16,7 @@
 
 
         <!-- LINK TO STYLESHEET -->
+         <link rel="stylesheet" href="styles.css">
         <!-- TO DO -->
     </head>
 
